--- a/style.css
+++ b/style.css
@@ -5,12 +5,13 @@
 }
 
 body {
-    margin:0;
+    margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 .urna {
     background-color: #dbd5c9;
     padding: 30px;
@@ -25,8 +26,8 @@ body {
     flex-direction: column;
 }
 .teclado {
-    background-color: #403A3A;
     margin-left: 30px;
+    background-color: #403A3A;
 }
 .teclado--linha {
     display: flex;
@@ -58,13 +59,15 @@ body {
 }
 .botao--confirma {
     background-color: #48C079;
-    color: #FFF;
+    color: #000;
     font-size: 15px;
     width: 90px;
     height: 50px;
 }
+
+
 .d-1 {
-    flex: 1;   
+    flex: 1;
     display: flex;
 }
 .d-1-left {
@@ -85,7 +88,7 @@ body {
     justify-content: center;
 }
 .d-1-3 {
-    height: 50px;    
+    height: 50px;
 }
 .numero {
     display: inline-block;
@@ -94,24 +97,23 @@ body {
     border: 1px solid #000;
     text-align: center;
     line-height: 40px;
-    font-size: 25px; 
+    font-size: 25px;
 }
 .pisca {
     animation-name: pisca;
     animation-duration: 1s;
     animation-iteration-count: infinite;
 }
-
 .d-1-4 {
     flex: 1;
     line-height: 30px;
-
 }
+
 .d-1-right {
- width: 90px;
- display: flex;
- flex-direction: column;
- align-items: flex-end;
+    width: 90px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
 .d-1-image {
     border: 1px solid #000;
@@ -127,9 +129,24 @@ body {
     font-size: 12px;
 }
 
+
 .d-2 {
     height: 50px;
     font-size: 14px;
     border-top: 2px solid #000;
-    padding-left:10px;
+    padding-left: 10px;
+}
+
+.aviso--grande {
+    font-size: 40px;
+    font-weight: bold;
+    text-align: center;
+}
+.aviso--gigante {
+    font-size: 70px;
+    font-weight: bold;
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
